version/0.13/_sources/api/ansys/dpf/core/operators/result/rom_data_provider/rom_data_provider.rst.txt






:class:`rom_data_provider`
==========================

.. py:class:: ansys.dpf.core.operators.result.rom_data_provider.rom_data_provider(rom_type=None, reduced_stiff_matrix=None, reduced_damping_matrix=None, reduced_mass_matrix=None, data_sources=None, reduced_rhs_vector=None, lumped_mass_matrix=None, mode_shapes=None, config=None, server=None)

   Bases: :py:obj:`ansys.dpf.core.dpf_operator.Operator`


   Set the required data for the invariant terms computation (reduced
   matrices, lumped mass matrix, modes …)


   :param rom_type: If this pin is set to true, customized rom data must be given
   :type rom_type: bool
   :param reduced_stiff_matrix: FieldsContainers containing the reduced Stiffness matrix
   :type reduced_stiff_matrix: FieldsContainer
   :param reduced_damping_matrix: FieldsContainers containing the reduced Mass matrix
   :type reduced_damping_matrix: FieldsContainer
   :param reduced_mass_matrix: FieldsContainers containing the reduced Damp matrix
   :type reduced_mass_matrix: FieldsContainer
   :param data_sources:
   :type data_sources: DataSources
   :param reduced_rhs_vector: FieldsContainers containing the reduced RHS vector
   :type reduced_rhs_vector: FieldsContainer
   :param lumped_mass_matrix: FieldsContainers containing the lumped Mass matrix
   :type lumped_mass_matrix: FieldsContainer
   :param mode_shapes: FieldsContainers containing the customized mode shapes
   :type mode_shapes: FieldsContainer

   :returns: * **rom_matrices** (*FieldsContainer*) -- FieldsContainers containing the reduced matrices
             * **mode_shapes** (*FieldsContainer*) -- FieldsContainers containing the mode shapes, which are CST and NOR for the cms method
             * **lumped_mass** (*FieldsContainer*) -- FieldsContainers containing the lumped mass
             * **model_data** (*PropertyField*) -- data describing the finite element model
             * **center_of_mass** (*PropertyField*)
             * **inertia_relief** (*Field*) -- inertia matrix
             * **model_size** (*float*) -- size of the model
             * **field_coordinates_and_euler_angles** (*float*) -- coordinates and euler angles of all nodes
             * *nod* -- ids of master nodes
             * **meshed_region** (*MeshedRegion*) -- expanded meshed region.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf

   >>> # Instantiate operator
   >>> op = dpf.operators.result.rom_data_provider()

   >>> # Make input connections
   >>> my_rom_type = bool()
   >>> op.inputs.rom_type.connect(my_rom_type)
   >>> my_reduced_stiff_matrix = dpf.FieldsContainer()
   >>> op.inputs.reduced_stiff_matrix.connect(my_reduced_stiff_matrix)
   >>> my_reduced_damping_matrix = dpf.FieldsContainer()
   >>> op.inputs.reduced_damping_matrix.connect(my_reduced_damping_matrix)
   >>> my_reduced_mass_matrix = dpf.FieldsContainer()
   >>> op.inputs.reduced_mass_matrix.connect(my_reduced_mass_matrix)
   >>> my_data_sources = dpf.DataSources()
   >>> op.inputs.data_sources.connect(my_data_sources)
   >>> my_reduced_rhs_vector = dpf.FieldsContainer()
   >>> op.inputs.reduced_rhs_vector.connect(my_reduced_rhs_vector)
   >>> my_lumped_mass_matrix = dpf.FieldsContainer()
   >>> op.inputs.lumped_mass_matrix.connect(my_lumped_mass_matrix)
   >>> my_mode_shapes = dpf.FieldsContainer()
   >>> op.inputs.mode_shapes.connect(my_mode_shapes)

   >>> # Instantiate operator and connect inputs in one line
   >>> op = dpf.operators.result.rom_data_provider(
   ...     rom_type=my_rom_type,
   ...     reduced_stiff_matrix=my_reduced_stiff_matrix,
   ...     reduced_damping_matrix=my_reduced_damping_matrix,
   ...     reduced_mass_matrix=my_reduced_mass_matrix,
   ...     data_sources=my_data_sources,
   ...     reduced_rhs_vector=my_reduced_rhs_vector,
   ...     lumped_mass_matrix=my_lumped_mass_matrix,
   ...     mode_shapes=my_mode_shapes,
   ... )

   >>> # Get output data
   >>> result_rom_matrices = op.outputs.rom_matrices()
   >>> result_mode_shapes = op.outputs.mode_shapes()
   >>> result_lumped_mass = op.outputs.lumped_mass()
   >>> result_model_data = op.outputs.model_data()
   >>> result_center_of_mass = op.outputs.center_of_mass()
   >>> result_inertia_relief = op.outputs.inertia_relief()
   >>> result_model_size = op.outputs.model_size()
   >>> result_field_coordinates_and_euler_angles = op.outputs.field_coordinates_and_euler_angles()
   >>> result_nod = op.outputs.nod()
   >>> result_meshed_region = op.outputs.meshed_region()












.. py:currentmodule:: rom_data_provider

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect an input on the operator using a pin number.
          * - :py:attr:`~connect_operator_as_input`
            - Connect an operator as an input on a pin.
          * - :py:attr:`~get_output`
            - Retrieve the output of the operator on the pin number.
          * - :py:attr:`~run`
            - Evaluate this operator.
          * - :py:attr:`~eval`
            - Evaluate this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~inputs`
            - Enables to connect inputs to the operator
          * - :py:attr:`~outputs`
            - Enables to get outputs of the operator by evaluating it
          * - :py:attr:`~progress_bar`
            - Enable or disable progress bar display when requesting the operator's output.
          * - :py:attr:`~config`
            - Copy of the operator's current configuration.
          * - :py:attr:`~id`
            - Retrieve the unique identifier of the operator.
          * - :py:attr:`~specification`
            - Returns the Specification (or documentation) of this Operator.


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - 


   .. tab-item:: Static methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~default_config`
            - Returns the default config of the operator.
          * - :py:attr:`~operator_specification`
            - Documents an Operator with its description (what the Operator does),its inputs and outputs and some properties.


   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__del__`
            - Delete this instance.
          * - :py:attr:`~__str__`
            - Describe the entity.
          * - :py:attr:`~__add__`
            - Add two fields or two fields containers.
          * - :py:attr:`~__sub__`
            - Subtract two fields or two fields containers.
          * - :py:attr:`~__pow__`
            - Raise each element of a field or a fields container to power 2.
          * - :py:attr:`~__mul__`
            - Multiply two fields or two fields containers.
          * - :py:attr:`~__truediv__`
            - Perform division with another operator or a scalar.




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.result.rom_data_provider import rom_data_provider

Property detail
---------------

.. py:property:: inputs
   :type: InputsRomDataProvider


   Enables to connect inputs to the operator

   :returns: An instance of InputsRomDataProvider.
   :rtype: inputs

.. py:property:: outputs
   :type: OutputsRomDataProvider


   Enables to get outputs of the operator by evaluating it

   :returns: An instance of OutputsRomDataProvider.
   :rtype: outputs

.. py:property:: progress_bar
   :type: bool


   Enable or disable progress bar display when requesting the operator's output.

   With this property, the user can choose to print a progress bar when
   the operator's output is requested, default is False

.. py:property:: config

   Copy of the operator's current configuration.

   You can modify the copy of the configuration and then use ``operator.config = new_config``
   or instantiate an operator with the new configuration as a parameter.

   For information on an operator's options, see the documentation for that operator.

   :returns: Copy of the operator's current configuration.
   :rtype: :class:`ansys.dpf.core.config.Config`

   .. rubric:: Examples

   Modify the copy of an operator's configuration and set it as current config
   of the operator.

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.math.add()
   >>> config_add = op.config
   >>> config_add.set_work_by_index_option(True)
   >>> op.config = config_add

.. py:property:: id
   :type: int


   Retrieve the unique identifier of the operator.

   This property returns the unique ID associated with the operator.
   This property is lazily initialized.

   :returns: The unique identifier of the operator.
   :rtype: int

   .. rubric:: Notes

   Property available with server's version starting at 10.0.

.. py:property:: specification

   Returns the Specification (or documentation) of this Operator.

   :rtype: Specification



Attribute detail
----------------

.. py:attribute:: name
   :value: None




Method detail
-------------

.. py:method:: default_config(server: ansys.dpf.core.server_types.AnyServerType = None) -> ansys.dpf.core.config.Config
   :staticmethod:


   Returns the default config of the operator.

   This config can then be changed to the user needs and be used to
   instantiate the operator. The Configuration allows to customize
   how the operation will be processed by the operator.

   :param server: Server with channel connected to the remote or local instance. When
                  ``None``, attempts to use the global server.

   :returns: A new Config instance equivalent to the default config for this operator.
   :rtype: config


.. py:method:: connect(pin, inpt, pin_out=0)

   Connect an input on the operator using a pin number.

   :param pin: Number of the input pin.
   :type pin: int
   :param inpt:
   :type inpt: str, int, double, bool, list[int], list[float], Field, FieldsContainer, Scoping,
   :param ScopingsContainer: Operator, os.PathLike Object to connect to.
   :param MeshedRegion: Operator, os.PathLike Object to connect to.
   :param MeshesContainer: Operator, os.PathLike Object to connect to.
   :param DataSources: Operator, os.PathLike Object to connect to.
   :param CyclicSupport: Operator, os.PathLike Object to connect to.
   :param dict: Operator, os.PathLike Object to connect to.
   :param Outputs: Operator, os.PathLike Object to connect to.
   :param pin_out: If the input is an operator, the output pin of the input operator. The default is ``0``.
   :type pin_out: int, optional

   .. rubric:: Examples

   Compute the minimum of displacement by chaining the ``"U"`` and ``"min_max_fc"`` operators.

   >>> from ansys.dpf import core as dpf
   >>> from ansys.dpf.core import examples
   >>> data_src = dpf.DataSources(examples.find_multishells_rst())
   >>> disp_op = dpf.operators.result.displacement()
   >>> disp_op.inputs.data_sources(data_src)
   >>> max_fc_op = dpf.operators.min_max.min_max_fc()
   >>> max_fc_op.inputs.connect(disp_op.outputs)
   >>> max_field = max_fc_op.outputs.field_max()
   >>> max_field.data
   DPFArray([[0.59428386, 0.00201751, 0.0006032 ]]...


.. py:method:: connect_operator_as_input(pin, op)

   Connect an operator as an input on a pin.

   :param pin: Number of the output pin. The default is ``0``.
   :type pin: int
   :param op: Requested type of the output. The default is ``None``.
   :type op: :class:`ansys.dpf.core.dpf_operator.Operator`


.. py:method:: get_output(pin=0, output_type=None)

   Retrieve the output of the operator on the pin number.

   To activate the progress bar for server version higher or equal to 3.0,
   use ``my_op.progress_bar=True``

   :param pin: Number of the output pin. The default is ``0``.
   :type pin: int, optional
   :param output_type: Requested type of the output. The default is ``None``.
   :type output_type: :class:`ansys.dpf.core.common.types`, type,  optional

   :returns: Output of the operator.
   :rtype: type


.. py:method:: __del__()

   Delete this instance.


.. py:method:: __str__()

   Describe the entity.

   :returns: Description of the entity.
   :rtype: str


.. py:method:: run()

   Evaluate this operator.


.. py:method:: eval(pin=None)

   Evaluate this operator.

   :param pin: Number of the output pin. The default is ``None``.
   :type pin: int

   :returns: **output** -- Returns the first output of the operator by default and the output of a
             given pin when specified. Or, it only evaluates the operator without output.
   :rtype: FieldsContainer, Field, MeshedRegion, Scoping

   .. rubric:: Examples

   Use the ``eval`` method.

   >>> from ansys.dpf import core as dpf
   >>> import ansys.dpf.core.operators.math as math
   >>> from ansys.dpf.core import examples
   >>> data_src = dpf.DataSources(examples.find_multishells_rst())
   >>> disp_op = dpf.operators.result.displacement()
   >>> disp_op.inputs.data_sources(data_src)
   >>> normfc = math.norm_fc(disp_op).eval()


.. py:method:: __add__(fields_b)

   Add two fields or two fields containers.

   :returns: **add**
   :rtype: operators.math.add_fc


.. py:method:: __sub__(fields_b)

   Subtract two fields or two fields containers.

   :returns: **minus**
   :rtype: operators.math.minus_fc


.. py:method:: __pow__(value)

   Raise each element of a field or a fields container to power 2.


.. py:method:: __mul__(value)

   Multiply two fields or two fields containers.

   :returns: **mul**
   :rtype: operators.math.generalized_inner_product_fc


.. py:method:: operator_specification(op_name, server=None)
   :staticmethod:


   Documents an Operator with its description (what the Operator does),its inputs and outputs and some properties.


.. py:method:: __truediv__(inpt)

   Perform division with another operator or a scalar.

   This method allows the use of the division operator (`/`) between an
   `Operator` instance and either another `Operator` or a scalar value (float).





